[package]
name = "hatagenpeikun"
version = "0.1.0"
authors = ["ishikado <okazakisaburo@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slack = "0.22.0"
slack = { git = "https://github.com/ishikado/slack-rs.git" }
log = "0.4.0"
env_logger = "0.6.2"
getopts = "0.2"
failure = "0.1.5"
chrono-tz = "0.5.1"
chrono = "0.4.9"
regex = "1.3.1"
rand = "0.7"
rand_xoshiro = "0.3.0"
serde      = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
postgres = "0.15"

[dependencies.redis]
version = "*"

[[bin]]
name = "hatagenpei_sample"
path = "src/hatagenpei/main.rs"

[[bin]]
name = "hatagenpeikun"
path = "src/main.rs"
